Better functionality on narrow screens. Fix #148

--- a/src/Table/Table.scss
+++ b/src/Table/Table.scss
@@ -8,6 +8,10 @@
   font-weight: 600;
 }
 
+.Table {
+  overflow-x: auto;
+}
+
 .Table table {
   border: solid 2px $brand-color-fog;
   th {
